force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <description>Company or person the events are organised for.</description>
    <label>Client</label>
    <labelPlural>Clients</labelPlural>
    <nameField>
        <label>Client Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>