force-app/main/default/objects/Client__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Recipient of the client reminder.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>